restructured ChaosGameFileHandler and added exceptions